[package]
name = "cpm"
version = "0.1.0"
authors = ["Matias Alvin <alvinmatias69@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = "0.9.20"
serde = { version = "1.0", features = ["derive"] }
